--- a/src/app/todo-details/todo-details.component.html
+++ b/src/app/todo-details/todo-details.component.html
@@ -23,7 +23,7 @@
     <ng-container matColumnDef="Delete">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let entry; let i = index;">
-        <button class="delete_button" mat-icon-button color="warn" (click)="liService.remove(i)">
+        <button class="delete_button" mat-icon-button color="warn" id="b" (click)="liService.remove(i)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
